--- a/Coursework/CMP105App/CMP105App.vcxproj.filters
+++ b/Coursework/CMP105App/CMP105App.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="font\arial.ttf" />
+  </ItemGroup>
 </Project>
